--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,16 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "start.sh",
-      "use": "@vercel/bash"
-    }
-  ],
-  "routes": [
-    { "src": "/(.*)", "dest": "start.sh" }
-  ]
-}
+    "version": 2,
+    "builds": [
+      {
+        "src": "api/withProba.py",
+        "use": "@vercel/python"
+      }
+    ],
+    "routes": [
+      {
+        "src": "/(.*)",
+        "dest": "api/withProba.py"
+      }
+    ]
+  }
+  
