--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,8 @@
     "builds": [
       {
         "src": "api/withProba.py",
-        "use": "@vercel/python"
+        "use": "@vercel/python",
+        "config": { "buildCommand": "sh build.sh" }
       }
     ],
     "routes": [
@@ -12,5 +13,4 @@
         "dest": "api/withProba.py"
       }
     ]
-  }
-  
+}
