--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,15 @@
 {
     "version": 2,
-    "functions": {
-        "api/withProba.py": {
-            "runtime": "@vercel/python",
-            "includeFiles": "build.sh"
-        }
-    },
+    "builds": [
+      {
+        "src": "api/withProba.py",
+        "use": "@vercel/python@3.9"
+      }
+    ],
     "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "api/withProba.py"
-        }
+      {
+        "src": "/(.*)",
+        "dest": "api/withProba.py"
+      }
     ]
 }
