--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
     "builds": [
       {
         "src": "api/withProba.py",
-        "use": "@vercel/python@3.10.12"
+        "use": "@vercel/python"
       }
     ],
     "routes": [
@@ -12,4 +12,5 @@
         "dest": "api/withProba.py"
       }
     ]
-}
+  }
+  
