--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,14 @@
 {
     "version": 2,
     "builds": [
-      {
-        "src": "api/withProba.py",
+    {
+        "src": "runtime.txt",
+        "use": "@vercel/static"
+    },
+    {
+        "src": "requirements.txt",
         "use": "@vercel/python"
-      }
+    }
     ],
     "routes": [
       {
