--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,13 @@
 {
-    "version": 2,
-    "builds": [
-    {
-        "src": "runtime.txt",
-        "use": "@vercel/static"
+    "build": {
+      "env": {
+        "PYTHON_VERSION": "3.10"
+      },
+      "commands": [
+        "echo 'Menjalankan runtime...'",
+        "pip install -r requirements.txt"
+      ]
     },
-    {
-        "src": "requirements.txt",
-        "use": "@vercel/python"
-    }
-    ],
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "api/withProba.py"
-      }
-    ]
+    "start": "python api/withProba.py"
   }
   
